# nlpsummarize

./: CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  release.yml
data/: sample_csv.csv
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  nlpsummarize.rst
model/: directions_model.txt
nlpsummarize/: dependencies.py  detect_language.py  nlp.py  part_of_speech.py  polarity.py  summary_4.py  summary_4_sentence_stopwords_freq_detection.py
tests/: test_nlpsummarize.py
