[tool.poetry]
name = "nlpsummarize"
version = "0.1.8"
description = "Python package that provides a nice summary of all character columns in a pandas dataframe."
authors = ["vigchandra <vignesh.chandrasekaran.100@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"

[tool.semantic_release]
version_variable = "nlpsummarize/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

